<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@null"
        android:contentDescription="@string/back"
        android:src="@drawable/btnback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/category_small_title"
        android:textColor="@color/bg_light"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <TextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/dashboard_welcome_preview"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <TextView
        android:id="@+id/tvHeaderDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/dashboard_desc"
        android:textColor="@color/primary_blue_soft"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderTitle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/bg_light"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderDesc">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingTop="30dp"
                android:paddingEnd="24dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/tabAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_semibold"
                    android:text="@string/tab_all"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardSocial"
                    android:layout_width="0dp"
                    android:layout_height="185dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="#F6D9DE"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="2dp"
                    app:layout_constraintEnd_toStartOf="@id/card3d"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tabAll"
                    app:layout_constraintWidth_percent="0.47">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/tvSocialTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_semibold"
                            android:text="@string/category_design"
                            android:textColor="@color/text_dark"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvSocialCourse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/urbanist_medium"
                            android:text="@string/course_15"
                            android:textColor="@color/text_secondary"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvSocialTitle" />

                        <ImageView
                            android:id="@+id/imgSocial"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:contentDescription="@null"
                            android:src="@drawable/design"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvSocialCourse" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card3d"
                    android:layout_width="0dp"
                    android:layout_height="185dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="#D8F1EA"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cardSocial"
                    app:layout_constraintTop_toBottomOf="@id/tabAll"
                    app:layout_constraintWidth_percent="0.47">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/img3d"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:contentDescription="@null"
                            android:src="@drawable/digital"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv3dTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/urbanist_semibold"
                            android:text="@string/category_marketing"
                            android:textColor="@color/text_dark"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/img3d" />

                        <TextView
                            android:id="@+id/tv3dCourse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/urbanist_medium"
                            android:text="@string/course_10"
                            android:textColor="@color/text_secondary"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv3dTitle" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardAe"
                    android:layout_width="0dp"
                    android:layout_height="185dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="#A9D0F5"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="2dp"
                    app:layout_constraintEnd_toStartOf="@id/cardAi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardSocial"
                    app:layout_constraintWidth_percent="0.47">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/imgAe"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:contentDescription="@null"
                            android:src="@drawable/productivity"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvAeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/urbanist_semibold"
                            android:text="@string/category_productivity"
                            android:textColor="@color/text_dark"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imgAe" />

                        <TextView
                            android:id="@+id/tvAeCourse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/urbanist_medium"
                            android:text="@string/course_25"
                            android:textColor="@color/text_secondary"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvAeTitle" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardAi"
                    android:layout_width="0dp"
                    android:layout_height="185dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="#F4C4BB"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cardAe"
                    app:layout_constraintTop_toBottomOf="@id/card3d"
                    app:layout_constraintWidth_percent="0.47">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvAiTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_semibold"
                            android:text="@string/category_programming"
                            android:textColor="@color/text_dark"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvAiCourse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/urbanist_medium"
                            android:text="@string/course_25"
                            android:textColor="@color/text_secondary"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvAiTitle" />

                        <ImageView
                            android:id="@+id/imgAi"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:contentDescription="@null"
                            android:src="@drawable/programming"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvAiCourse" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>